--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,3 +31,15 @@ services:
       --ws-external
       --rpc-external
       --rpc-cors all
+
+  proxy:
+    container_name: 5irechain_proxy
+
+    image: taekion/5irechain-proxy
+    build: ./nginx-proxy
+
+    ports:
+      - 443:443
+
+    volumes:
+      - /etc/letsencrypt/live/5irechain.dcntral.net:/ssl/5irechain.dcntral.net
