--- a/nginx-proxy/Dockerfile
+++ b/nginx-proxy/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:latest
 
+COPY /etc/letsencrypt/live/5irechain.dcntral.net /ssl/5irechain.dcntral.net
 COPY proxy.conf /etc/nginx/conf.d/proxy.conf
