--- a/nginx-proxy/proxy.conf
+++ b/nginx-proxy/proxy.conf
@@ -10,7 +10,7 @@ server {
     ssl_certificate_key /ssl/5irechain.dcntral.net/privkey.pem;
 
     location / {
-        proxy_pass http://localhost:9944;
+        proxy_pass http://5irechain.dcntral.net:9944;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
