--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       --ws-external
       --rpc-external
       --rpc-cors all
+      --rpc-methods Unsafe
 
   proxy:
     container_name: 5irechain_proxy
