Add the --validator flag to the node command line
Signed-off-by: William Katsak <bill@taekion.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       --rpc-external
       --rpc-cors all
       --rpc-methods Unsafe
+      --validator
 
   proxy:
     container_name: 5irechain_proxy
